unpackaged/main/default/objects/GC_Design_Request_Form__c/GC_Design_Request_Form__c.object-meta.xml
<CustomObject>
    <description>GES Connect (GC) Design Request Form Custom Object.  Each Opportunity will have one and only one Active Design Request Form.  The Design Request Form object will be the central object to relate Design Element designated to a show.  The DRF contains details about budgets / graphics / show information.</description>
    <label>Design Request Form</label>
    <nameField>
        <displayFormat>DRF-{0000}</displayFormat>
        <label>Design Request Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Design Request Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>