unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Connect2_Show__c.field-meta.xml
<CustomField>
    <fullName>Connect2_Show__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Connect2 Show</label>
    <referenceTo>GC_Connect2_Show__c</referenceTo>
    <relationshipLabel>Design Request Forms</relationshipLabel>
    <relationshipName>Design_Request_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>