unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Date Requested for show</description>
    <inlineHelpText>Date Requested for show</inlineHelpText>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>