unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Design_Team__c.field-meta.xml
<CustomField>
    <fullName>Design_Team__c</fullName>
    <description>Name of Design Team.</description>
    <inlineHelpText>Name of Design Team.</inlineHelpText>
    <label>Design Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>