unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/DRF_Number__c.field-meta.xml
<CustomField>
    <fullName>DRF_Number__c</fullName>
    <description>Numbers assigned to DRF</description>
    <inlineHelpText>Numbers assigned to DRF</inlineHelpText>
    <label>DRF Number</label>
    <type>AutoNumber</type>
</CustomField>