unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/DRF_Requester_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>DRF_Requester_Phone_Number__c</fullName>
    <label>Requester Phone Number</label>
    <type>Phone</type>
</CustomField>