unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/DRF_Revenue__c.field-meta.xml
<CustomField>
    <fullName>DRF_Revenue__c</fullName>
    <label>Revenue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>