unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <description>(No Longer Used)</description>
    <inlineHelpText>Name of Facility.</inlineHelpText>
    <label>Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>