unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/FormulaShowCityCode__c.field-meta.xml
<CustomField>
    <fullName>FormulaShowCityCode__c</fullName>
    <description>Opportunity Show City Code</description>
    <formula>IF(NOT(ISBLANK(Connect2_Show__r.Production_Location__c)), LEFT(Connect2_Show__r.Production_Location__c, 2) + &#39;&#39;, &#39;&#39;)</formula>
    <inlineHelpText>Opportunity Show City Code</inlineHelpText>
    <label>Show City Code</label>
    <type>Text</type>
</CustomField>