unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/FormulaShowCloseDate__c.field-meta.xml
<CustomField>
    <fullName>FormulaShowCloseDate__c</fullName>
    <description>Opportunity Show Close Date</description>
    <formula>Connect2_Show__r.Show_End_Date__c</formula>
    <inlineHelpText>Close Date of Show</inlineHelpText>
    <label>Show Close Date</label>
    <type>Date</type>
</CustomField>