unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/FormulaShowFacility__c.field-meta.xml
<CustomField>
    <fullName>FormulaShowFacility__c</fullName>
    <description>Opportunity Show Facility Name</description>
    <formula>Connect2_Show__r.Facility__c</formula>
    <inlineHelpText>Opportunity Show Facility Name</inlineHelpText>
    <label>Show Facility Name</label>
    <type>Text</type>
</CustomField>