unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/FormulaShowFacilityID__c.field-meta.xml
<CustomField>
    <fullName>FormulaShowFacilityID__c</fullName>
    <description>Opportunity Show Facility ID</description>
    <formula>Connect2_Show__r.Facility_ID__c</formula>
    <inlineHelpText>Opportunity Show Facility ID</inlineHelpText>
    <label>Show Facility ID</label>
    <type>Text</type>
</CustomField>