unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/FormulaShowJobNumber__c.field-meta.xml
<CustomField>
    <fullName>FormulaShowJobNumber__c</fullName>
    <description>Opportunity Show Job Number</description>
    <formula>IF(( NOT(ISBLANK(Connect2_Show__r.Production_Location__c)) &amp;&amp; NOT(ISBLANK(Connect2_Show__r.YRMO__c)) &amp;&amp; NOT(ISBLANK(Connect2_Show__r.Job_Number__c))), LEFT(Connect2_Show__r.Production_Location__c, 2) + &#39;-&#39; + RIGHT(Connect2_Show__r.YRMO__c,4) + &#39;-&#39; + RIGHT(Connect2_Show__r.Job_Number__c, 6), &#39;&#39;)</formula>
    <inlineHelpText>Opportunity Show Job Number (City Code - YRMO - Job Number)</inlineHelpText>
    <label>Show Job Number</label>
    <type>Text</type>
</CustomField>