unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/FormulaShowLastJobNumber__c.field-meta.xml
<CustomField>
    <fullName>FormulaShowLastJobNumber__c</fullName>
    <description>Opportunity Last Years Show Job Number</description>
    <formula>IF((NOT(ISBLANK(Connect2_Show__r.Last_Worked_YRMO_JN__c))), LEFT(RIGHT(Connect2_Show__r.Last_Worked_YRMO_JN__c,8),2) + &#39;-&#39; + RIGHT(LEFT(Connect2_Show__r.Last_Worked_YRMO_JN__c,6),4) + &#39;-&#39; + RIGHT(Connect2_Show__r.Last_Worked_YRMO_JN__c,6), &#39;Unknown&#39;)</formula>
    <inlineHelpText>Opportunity Show Last Year&#39;s Job Number (City Code - YRMO - Job Number)</inlineHelpText>
    <label>Show Last Year&#39;s Job Number</label>
    <type>Text</type>
</CustomField>