unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/FormulaShowOpenDate__c.field-meta.xml
<CustomField>
    <fullName>FormulaShowOpenDate__c</fullName>
    <description>Opportunity Show Open Date</description>
    <formula>Connect2_Show__r.Show_Start_Date__c</formula>
    <inlineHelpText>Opportunity Show Open Date</inlineHelpText>
    <label>Show Open Date</label>
    <type>Date</type>
</CustomField>