unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/FormulaShowRevenue__c.field-meta.xml
<CustomField>
    <fullName>FormulaShowRevenue__c</fullName>
    <formula>Connect2_Show__r.Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Revenue</label>
    <type>Text</type>
</CustomField>