unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Hall__c.field-meta.xml
<CustomField>
    <fullName>Hall__c</fullName>
    <description>(No Longer Used)</description>
    <inlineHelpText>Name of the Hall</inlineHelpText>
    <label>Hall</label>
    <length>255</length>
    <type>Text</type>
</CustomField>