unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Project_Brief_Question_1__c.field-meta.xml
<CustomField>
    <fullName>Project_Brief_Question_1__c</fullName>
    <defaultValue>IF( $RecordType.Name == &#39;RFP (Exhibition or Event)&#39;, &#39;Can you provide the client’s corporate identity &amp; show theme style guide? If not, is the show theme development &amp; experience expected within the RFP?&#39;,

IF( $RecordType.Name == &#39;Sold Event&#39;, &#39;Can you provide the client’s corporate identity &amp; show theme style guide? If not, is the show theme development and experience expected within your request?&#39;,

IF( $RecordType.Name == &#39;Sold Exhibition&#39;, &#39;Can you provide an overview of the event experience, strategy, and an event theme style guide? If not, is the show theme development &amp; experience expected within your request?&#39;, &#39;Record type not found&#39;) ) )</defaultValue>
    <inlineHelpText>Provide client’s corporate identity &amp; show theme style guide otherwise, analyze if an RFP relation exist?</inlineHelpText>
    <label>Project Brief Question 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>