unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Project_Brief_Question_3__c.field-meta.xml
<CustomField>
    <fullName>Project_Brief_Question_3__c</fullName>
    <defaultValue>IF( $RecordType.Name == &#39;RFP (Exhibition or Event)&#39;, &#39;What 3 things do we need to do to win this account and how can design support? (Creativity is a given)&#39;, &#39;What 3 things do we need to do to ensure account retention and how can design support? (Creativity is a given)&#39;)</defaultValue>
    <description>What 3 things do we need to do to win this account and how can design support? (Creativity is a given)</description>
    <inlineHelpText>Actions necessary to win account and gain support.</inlineHelpText>
    <label>Project Brief Question 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>