unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>GC_Show_Team_Member__c</referenceTo>
    <relationshipLabel>Design Request Forms</relationshipLabel>
    <relationshipName>Design_Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>