unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Requester_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Requester_Email_Address__c</fullName>
    <description>Email of Requester.</description>
    <formula>Requester_User__r.Email</formula>
    <label>Requester Email Address</label>
    <type>Text</type>
</CustomField>