unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Requester_Secondary_STM__c.field-meta.xml
<CustomField>
    <fullName>Requester_Secondary_STM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is auto populated when secondary requester user is filled out. When the secondary requester user is set on the DRF, a team member is created and linked to the show.</description>
    <inlineHelpText>This field is auto populated when secondary requester user is filled out. When the secondary requester user is set on the DRF, a team member is created and linked to the show.</inlineHelpText>
    <label>Secondary Team Member Requester</label>
    <referenceTo>GC_Show_Team_Member__c</referenceTo>
    <relationshipLabel>Design Request Forms (Secondary Team Member Requester)</relationshipLabel>
    <relationshipName>Design_Request_Forms2</relationshipName>
    <type>Lookup</type>
</CustomField>