unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Requester_STM__c.field-meta.xml
<CustomField>
    <fullName>Requester_STM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is auto populated when requester user is filled out. When the requester user is set on the DRF, a team member is created and linked to the show.</description>
    <inlineHelpText>This field is auto populated when requester user is filled out. When the requester user is set on the DRF, a team member is created and linked to the show.</inlineHelpText>
    <label>Requester Team Member</label>
    <referenceTo>GC_Show_Team_Member__c</referenceTo>
    <relationshipLabel>Design Request Forms (Requester STM)</relationshipLabel>
    <relationshipName>Design_Request_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>