unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Requester_User__c.field-meta.xml
<CustomField>
    <fullName>Requester_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main requester for the DRF, this user is the only user allowed to cancel a DRF</description>
    <inlineHelpText>Main requester for the DRF, this user is the only user allowed to cancel a DRF</inlineHelpText>
    <label>Requester User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.GC_Is_Allowed_Requestor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Design_Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>