unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Requesters__c.field-meta.xml
<CustomField>
    <fullName>Requesters__c</fullName>
    <description>The person(s) who asks for something or who makes a request</description>
    <label>Requester(s)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>