unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Secondary_Requester_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Requester_Email_Address__c</fullName>
    <formula>Requester_Secondary_User__r.Email</formula>
    <label>Secondary Requester Email Address</label>
    <type>Text</type>
</CustomField>