unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Secondary_Requester_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Requester_Phone_Number__c</fullName>
    <formula>Requester_Secondary_User__r.Phone</formula>
    <label>Secondary Requester Phone Number</label>
    <type>Text</type>
</CustomField>