unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Show_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Show_Revenue__c</fullName>
    <label>Show Revenue</label>
    <length>30</length>
    <type>Text</type>
</CustomField>