unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Show_Theme_Guide__c.field-meta.xml
<CustomField>
    <fullName>Show_Theme_Guide__c</fullName>
    <description>Theme Guide pertaining to show</description>
    <inlineHelpText>Theme Guide pertaining to show</inlineHelpText>
    <label>Answer 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>