unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Tier_1_End_Date_Calc__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_End_Date_Calc__c</fullName>
    <description>End date of Tier 1</description>
    <formula>FormulaShowMoveInDate__c - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End date of Tier 1</inlineHelpText>
    <label>Tier 1 End Date</label>
    <type>Date</type>
</CustomField>