unpackaged/main/default/objects/GC_Design_Request_Form__c/fields/Tier_2_End_Date_Calc__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_End_Date_Calc__c</fullName>
    <description>Tier 2 End Date</description>
    <formula>FormulaShowMoveInDate__c - 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tier 2 End Date</inlineHelpText>
    <label>Tier 2 End Date</label>
    <type>Date</type>
</CustomField>