unpackaged/main/default/objects/GC_Design_Request_Form__c/recordTypes/RFP.recordType-meta.xml
<RecordType>
    <fullName>RFP</fullName>
    <active>true</active>
    <description>Request for Proposal for an Exhibition or Event.</description>
    <label>RFP (Exhibition or Event)</label>
</RecordType>