unpackaged/main/default/objects/GC_Design_Request_Form__c/recordTypes/Sold_Event.recordType-meta.xml
<RecordType>
    <fullName>Sold_Event</fullName>
    <active>true</active>
    <description>Sold Event</description>
    <label>Sold Event</label>
</RecordType>