unpackaged/main/default/objects/GC_Design_Request_Form__c/recordTypes/Sold_Exhibition.recordType-meta.xml
<RecordType>
    <fullName>Sold_Exhibition</fullName>
    <active>true</active>
    <description>Sold Exhibition</description>
    <label>Sold Exhibition</label>
</RecordType>