unpackaged/main/default/objects/GC_Design_Request_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Connect2_Show__c</columns>
    <columns>FormulaShowName__c</columns>
    <columns>FormulaShowType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>